# grafo

./: .gitignore  LICENSE.txt  MANIFEST.in  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: lint.yml  pypi-publish.yml  python-publish.yml  test.yml  tests.yml
grafo/: __init__.py  components.py  errors.py  executor.py  logger.py
grafo/_internal/: __init__.py  dataclasses.py  logger.py  protocols.py
grafo/components/: __init__.py
grafo/components/brain/: brain.py
grafo/components/brain/managers/: __init__.py
grafo/components/brain/managers/splitter/: __init__.py  manager.py  (+1 more)
grafo/components/splitter/: __init__.py  manager.py  schemas.py  splitter.py
grafo/components/tools/: manager.py
grafo/examples/: chat.py  example_chat.py
grafo/examples/brain/: brain.py  example_brain.py
grafo/examples/brain/components/: __init__.py
grafo/examples/brain/services/: __init__.py
grafo/examples/brain/tests/: test_analysis.py  test_task_splitter.py  test_vector_search.py
grafo/handlers/: base.py  openai_handler.py
grafo/handlers/db/: __init__.py  postgres_handler.py
grafo/handlers/llm/: openai_handler.py
grafo/handlers/rag/: base.py
grafo/interpreters/: __init__.py  base.py  openai_handler.py
grafo/llm/: __init__.py  base.py  openai_handler.py
grafo/trees/: __init__.py  components.py  executor.py
tests/: test_async_tree.py  test_brain.py  test_chat.py  test_openai_handler.py  test_pipeline.py  test_task_splitter.py  tools.py
tests/examples/: example_chat.py
tests/test_brain/: cake_recipe_writer.py  test_pipeline.py
(+21 files in other folders)
