[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grafo"
version = "0.2.017"
description = "A library for building runnable asynchronous trees"
readme = "readme.md"
authors = [
    { name = "@paulomtts", email = "paulomtts@outlook.com" }
]
urls = { "Homepage" = "https://github.com/HappyLoop/grafo" }
license = { text = "MIT" }
keywords = ["asynchronous", "trees", "library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.6"